css/Styles.css
@font-face {
    font-family: 'ralewayregular';
    src: url('Fonts/Raleway_regular/raleway-regular-webfont.woff2') format('woff2'),
         url('Fonts/Raleway_regular/raleway-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'ralewaybold';
    src: url('Fonts/Raleway_bold/raleway-bold-webfont.woff2') format('woff2'),
         url('Fonts/Raleway_bold/raleway-bold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

body
{
    background-color: white;
    font-family: 'ralewayregular', serif;
    color: black;
    margin: 0;
}

.container {
    max-width: 1340px;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
}

a
{
    text-decoration: none;
    color: black;
}

#logo a
{
    display: block;
}

.header_content
{
    display: flex;
    align-items: center;
}


nav 
{
    flex: 1;
    display: flex;
    justify-content: flex-end;
}

.nav
{
    padding: 45px 20px;
    border-top: 2px solid#fff;
    display: block;
}

.nav:hover
{
    border-top: 2px solid #0065FC;
    position: relative;
    color: #0065FC;
}

.inscrire
{
    font-family: 'ralewaybold', serif;
    padding-top: 47px;
    padding-bottom: 45px;
    margin-left: 40px;
}

.inscrire:hover
{
    color: #0065FC;
}

p 
{
    font-size: 17px;
}

h1
{
    font-family: 'ralewaybold', serif;
    font-size: 23px;
    margin: 0px;
}

h2
{
    font-family: 'ralewaybold', serif;
    margin:0 0 24px 0;
}

h3
{
    font-family: 'ralewaybold', serif;
    font-size: 18px;
}


form
{
    display: flex;
    margin-top: 21px;
}

label
{
    background-color: #F2F2F2;
    border-radius: 15px 0 0 15px;
    width: 50px;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
}

input
{
    font-family: 'ralewaybold', serif;
    width: 234px;
    padding-left: 17px;
    border-top: 1px solid #F2F2F2;
    border-bottom: 1px solid #F2F2F2;
    border-right: 0;
    border-left: 0;
    font-size: 1.1em;
}

input::placeholder 
{
    color: black;
    font-size: 1.1em;
}

button
{
    font-family: 'ralewaybold', serif;
    color: white;
    background: #0065FC;
    border-radius: 0 15px 15px 0;
    width: 134px;
    border: none;
    font-size: 1.1em;
}

#Filtres
{
    font-family: 'ralewaybold', serif;
    display: flex;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
    margin-top: 30px;
}

.Filtre
{
    display: flex;
    align-items: center;
    margin-left: 30px;
}

.Filtre i
{
    color: #0065FC;
    background-color: #DEEBFF;
    font-size: 1.4em;
    width: 50px;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 100%;
    margin-right: -25px;
    position: relative;
}

.Filtre p
{
    display: flex;
    align-items: center;
    border: 2px solid #D9D9D9;
    border-radius: 0 25px 25px 0;
    border-left: none;
    height: 46px;
    padding: 0 10px 0 35px;
    margin: 0;
}

.Filtre p:hover
{
    background-color: #DEEBFF;
    border-color: #DEEBFF;
}

#info
{
    display: flex;
    align-items: center;
    margin-top: 15px;
}


#info i
{
    display: flex;
    justify-content: center;
    align-items: center;
    color: #0065FC;
    border: 2px solid #F2F2F2;
    border-radius: 100%;
    width: 24px;
    height: 24px;
    margin-right: 12px;
}

#offres
{
    display: flex;
    align-items: center;
    margin-top: 30px;
}

#Hebergements
{
    margin-right: 3%;
    width: 66%;
    background-color: #F2F2F2;
    border-radius: 20px;
    padding: 47px 40px 12px 41px;
}

#Hebergements a:hover
{
    color: #0065FC;
}

#Annonces
{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
}

.annonce
{
    width: 31%;
}

.annonce a
{
    display: block;
}

.annonce_content
{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    border-radius: 20px;
    background-color: white;
    margin-bottom: 30px;  
    box-shadow: 2px 2px 10px #d9d9d9;  
}

.annonce img
{
    align-self: center;
    height: 114px;
    width: 95%;
    object-fit: cover;
    border: 5px solid white;
    border-radius: 15px 15px 0 0;
}


.annonce h3
{
    margin: 0 0 0 17px;
    padding-bottom: 6px;
    font-size: 16px;
}

.annonce p
{
    margin: 0 0 0 17px;
    padding-bottom: 6px;
    font-size: 15px;
}

.annonce .note
{
    margin: 0 0 0 17px;
    padding-bottom: 6px;
    font-size: 12px;
}

em
{
    font-family: 'ralewaybold', serif;
    background-color: white;
}


.annonce i
{
    color: #0065FC;
}

.annonce span i
{
    color: #D9D9D9;
}

#afficherplus
{
    margin-left: 10px;
}

#populaire
{
    display: flex;
    flex-direction: column;
    width: 31%;
    padding-top: 40px;
    padding-left: 37px;
    padding-right: 37px;
    background-color: #F2F2F2;
    border-radius: 20px;
}

#titrepop
{
    display: flex;
    justify-content: space-between;
}


#titrepop i
{
    font-size: 1.5em;
}

.annoncepop
{
    height: 32%;
}

.annoncepop a
{
    display: block;
}

.annoncepop a:hover
{
    color: #0065FC;
}

.annoncepop_content
{
    display: flex;
    align-items: center;
    border-radius: 20px;
    height: 144px;
    background-color: white;
    margin-bottom: 30px;  
    box-shadow: 2px 2px 10px #d9d9d9;
}

.annoncepop img
{  
    display: flex;
    width: 35%;
    height: 93%;
    object-fit: cover;
    border-radius: 20px 0 0 20px;
    border: 5px solid white;
}

.texte
{
    display: flex;
    flex-direction: column;
    padding: 16px;
}

.texte h3 
{
    margin: 0;
    font-size: 1.1em;
}

.texte p
{
    margin: 10px 0 0 0; 
    font-size: 0.9em;
}

.annoncepop span i
{
    color: #D9D9D9;
}

.texte .note
{
    color: #0065FC;
    font-size: 13px;
    margin-top: 40px;
}


#Activites
{
    margin-top: 60px;
    margin-bottom: 60px;
}

#Bloc_activites
{
    display: flex;
    justify-content: space-between;
}
/* ... */

